[fix] 페이지 조회 오류 수정